--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,67 +1,54 @@
-name: Deploy to GCP
+name: CD - Deploy to Staging and Production
 
 on:
   push:
     branches:
-      - main
       - develop
+      - main
 
 jobs:
-  deploy-backend:
+  deploy-staging:
+    if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
+    environment: staging
     steps:
       - uses: actions/checkout@v3
-
-      - name: Set up Cloud SDK (Production)
-        if: github.ref == 'refs/heads/main'
-        uses: google-github-actions/setup-gcloud@v1
+      - name: Deploy Frontend to Staging
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Set up Cloud SDK (Staging)
-        if: github.ref == 'refs/heads/develop'
-        uses: google-github-actions/setup-gcloud@v1
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CAREERCOPILOT_STAGING }}'
+          channelId: live
+          projectId: careercopilot-staging
+          target: careercopilot-staging-frontend
+      - name: Deploy Backend to Staging
+        uses: google-github-actions/deploy-cloudrun@v0
         with:
+          service: careercopilot-backend-staging
           project_id: ${{ secrets.GCP_STAGING_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_STAGING_SA_KEY }}
+          credentials: ${{ secrets.GCP_STAGING_SA_KEY }}
+          region: us-central1
+          source: ./backend
 
-      - name: Build and Deploy Backend (Production)
-        if: github.ref == 'refs/heads/main'
-        run: |-
-          gcloud config set run/region us-central1
-          gcloud run deploy careercopilot-backend --source ./backend --allow-unauthenticated --project=${{ secrets.GCP_PROJECT_ID }}
-
-      - name: Build and Deploy Backend (Staging)
-        if: github.ref == 'refs/heads/develop'
-        run: |-
-          gcloud config set run/region us-central1
-          gcloud run deploy careercopilot-backend-staging --source ./backend --allow-unauthenticated --project=${{ secrets.GCP_STAGING_PROJECT_ID }}
-
-  deploy-frontend:
+  deploy-production:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - uses: actions/checkout@v3
-
-      - name: Build Frontend
-        run: npm --prefix frontend install && npm --prefix frontend run build
-
-      - name: Deploy to Firebase Hosting (Production)
-        if: github.ref == 'refs/heads/main'
+      - name: Deploy Frontend to Production
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.GCP_SA_KEY }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CAREERCOPILOT }}'
           channelId: live
-          projectId: ${{ secrets.GCP_PROJECT_ID }}
-          target: careercopilot-frontend
-
-      - name: Deploy to Firebase Hosting (Staging)
-        if: github.ref == 'refs/heads/develop'
-        uses: FirebaseExtended/action-hosting-deploy@v0
+          projectId: careercopilot-prod
+          target: careercopilot-prod-frontend
+      - name: Deploy Backend to Production
+        uses: google-github-actions/deploy-cloudrun@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.GCP_STAGING_SA_KEY }}'
-          channelId: live
-          projectId: ${{ secrets.GCP_STAGING_PROJECT_ID }}
-          target: careercopilot-frontend-staging
+          service: careercopilot-backend-prod
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          credentials: ${{ secrets.GCP_SA_KEY }}
+          region: us-central1
+          source: ./backend
