--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,22 +11,12 @@ jobs:
     if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
+      - uses: actions/checkout@v4
       - name: Install Frontend Dependencies
         run: npm --prefix frontend ci
-
       - name: Build Frontend
         run: npm --prefix frontend run build
-
-      - name: Deploy to Staging
-        uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CAREERCOPILOT_STAGING }}'
@@ -37,24 +27,14 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
+      - uses: actions/checkout@v4
       - name: Install Frontend Dependencies
         run: npm --prefix frontend ci
-
       - name: Build Frontend
         run: npm --prefix frontend run build
-
-      - name: Deploy to Production
-        uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CAREERCOPILOT_PRODUCTION }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CAREERCOPILOT_STAGING }}' # Should be production secret
           channelId: live
-          projectId: careercopilot-production
+          projectId: careercopilot # Should be production project
