--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,33 @@
-name: Deploy Backend and Frontend
+# This is the name of the GitHub Actions workflow.
+name: CD - Deploy to Staging and Production
 
+# This workflow is triggered on any push to the 'develop' or 'main' branches.
 on:
   push:
     branches:
-      - main
       - develop
-  pull_request:
-    branches:
       - main
-      - develop
 
 jobs:
   deploy-staging:
-    if: github.ref == 'refs/heads/develop'
+    name: Deploy to Staging
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/develop'
     environment: staging
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_STAGING_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY_STAGING }}
-          export_default_credentials: true
-
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-
-      - name: Install and Build Frontend
-        run: |
-          cd frontend
-          npm install
-          npm run build
+          node-version: '20'
+      - name: Install Frontend Dependencies
+        run: npm ci
+        working-directory: ./frontend
+      - name: Build Frontend
+        run: npm run build
+        working-directory: ./frontend
 
       - name: Deploy Frontend to Firebase Hosting (Staging)
         uses: FirebaseExtended/action-hosting-deploy@v0
@@ -45,86 +37,70 @@ jobs:
           projectId: '${{ secrets.GCP_STAGING_PROJECT_ID }}'
           entryPoint: ./frontend
 
-      - name: Set up Docker
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Authenticate to Google Cloud (Staging)
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_STAGING_SA_KEY }}'
 
-      - name: Authenticate with Google Artifact Registry
-        run: gcloud auth configure-docker us-central1-docker.pkg.dev
+      - name: Setup Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
 
-      - name: Build and Push Docker image (Staging)
+      - name: Build and Push Docker Image (Staging)
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
-          tags: us-central1-docker.pkg.dev/${{ secrets.GCP_STAGING_PROJECT_ID }}/careercopilot-backend/backend-staging:latest
+          tags: australia-southeast1-docker.pkg.dev/${{ secrets.GCP_STAGING_PROJECT_ID }}/careercopilot-repo/backend:${{ github.sha }}
 
-      - name: Deploy to Cloud Run (Staging)
-        run: |
-          gcloud run deploy careercopilot-backend-staging \
-            --image us-central1-docker.pkg.dev/${{ secrets.GCP_STAGING_PROJECT_ID }}/careercopilot-backend/backend-staging:latest \
-            --region us-central1 \
-            --platform managed \
-            --allow-unauthenticated \
-            --set-env-vars="FIREBASE_CONFIG=${{ secrets.FIREBASE_CONFIG_STAGING }}" \
-            --set-env-vars="GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY_STAGING }}"
+      - name: Deploy Backend to Cloud Run (Staging)
+        uses: google-github-actions/deploy-cloudrun@v2
+        with:
+          service: 'careercopilot-backend-staging'
+          region: 'australia-southeast2'
+          image: australia-southeast1-docker.pkg.dev/${{ secrets.GCP_STAGING_PROJECT_ID }}/careercopilot-repo/backend:${{ github.sha }}
+          env_vars: |
+            GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
+            # ... Add all other runtime secrets here ...
 
   deploy-production:
-    if: github.ref == 'refs/heads/main'
+    name: Deploy to Production
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     environment: production
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PRODUCTION_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY_PRODUCTION }}
-          export_default_credentials: true
-
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-
-      - name: Install and Build Frontend
-        run: |
-          cd frontend
-          npm install
-          npm run build
+          node-version: '20'
+      - name: Install Frontend Dependencies
+        run: npm ci
+        working-directory: ./frontend
+      - name: Build Frontend
+        run: npm run build
+        working-directory: ./frontend
 
       - name: Deploy Frontend to Firebase Hosting (Production)
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CAREERCOPILOT }}'
-          projectId: '${{ secrets.GCP_PRODUCTION_PROJECT_ID }}'
+          projectId: '${{ secrets.GCP_PROJECT_ID }}'
           entryPoint: ./frontend
 
-      - name: Set up Docker
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Authenticate to Google Cloud (Production)
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
-      - name: Authenticate with Google Artifact Registry
-        run: gcloud auth configure-docker us-central1-docker.pkg.dev
+      - name: Setup Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
 
-      - name: Build and Push Docker image (Production)
+      - name: Build and Push Docker Image (Production)
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
-          tags: us-central1-docker.pkg.dev/${{ secrets.GCP_PRODUCTION_PROJECT_ID }}/careercopilot-backend/backend-production:latest
-
-      - name: Deploy to Cloud Run (Production)
-        run: |
-          gcloud run deploy careercopilot-backend-production \
-            --image us-central1-docker.pkg.dev/${{ secrets.GCP_PRODUCTION_PROJECT_ID }}/careercopilot-backend/backend-production:latest \
-            --region us-central1 \
-            --platform managed \
-            --allow-unauthenticated \
-            --set-env-vars="FIREBASE_CONFIG=${{ secrets.FIREBASE_CONFIG_PRODUCTION }}" \
-            --set-env-vars="GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY_PRODUCTION }}"
+          tags: australia
