--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CAREERCOPILOT_STAGING }}'
           projectId: '${{ secrets.GCP_STAGING_PROJECT_ID }}'
           entryPoint: ./frontend
+          channelId: live
 
       - name: Authenticate to Google Cloud (Staging)
         uses: google-github-actions/auth@v2
@@ -96,6 +97,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CAREERCOPILOT }}'
           projectId: '${{ secrets.GCP_PROJECT_ID }}'
           entryPoint: ./frontend
+          channelId: live
 
       - name: Authenticate to Google Cloud (Production)
         uses: google-github-actions/auth@v2
