fix(ci): Set explicit service account for Cloud Run

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,6 +70,7 @@ jobs:
           service: 'careercopilot-backend-staging'
           region: 'australia-southeast2'
           image: australia-southeast1-docker.pkg.dev/${{ secrets.GCP_STAGING_PROJECT_ID }}/careercopilot-repo/backend:${{ github.sha }}
+          service_account: 'careercopilot-backend-staging@${{ secrets.GCP_STAGING_PROJECT_ID }}.iam.gserviceaccount.com'
           env_vars: |
             GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
             # ... Add all other runtime secrets here ...
@@ -122,4 +123,15 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: australia
+          tags: australia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/careercopilot-repo/backend:${{ github.sha }}
+          
+      - name: Deploy Backend to Cloud Run (Production)
+        uses: google-github-actions/deploy-cloudrun@v2
+        with:
+          service: 'careercopilot-backend'
+          region: 'australia-southeast2'
+          image: australia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/careercopilot-repo/backend:${{ github.sha }}
+          service_account: 'careercopilot-backend@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com'
+          env_vars: |
+            GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
+            # ... Add all other runtime secrets here ...
