fix(backend): Overhaul Dockerfile to standard layout for Cloud Run

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,25 +1,18 @@
-# Use an official Python runtime as a parent image
+# 1. Use the official, required Python version
 FROM python:3.11-slim
 
-# Set the working directory in the container
-WORKDIR /usr/src/app
+# 2. Set a consistent working directory
+WORKDIR /app
 
-# Expose the port Cloud Run expects
-EXpose 8080
+# 3. Copy only the requirements file first to leverage Docker layer caching
+COPY ./requirements.txt /app/requirements.txt
 
-# Copy the requirements file into the container
-COPY requirements.txt ./
-
-# Install dependencies
+# 4. Install the dependencies
 RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install black
 
-# Copy the application code
-COPY ./app /usr/src of this change./app/app
+# 5. Copy the entire application source code into the container
+COPY ./app /app/app
 
-# Original startup command, temporarily disabled for debugging
-# CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
-
-# --- TEMPORARY DEBUGGING COMMAND ---
-# This command keeps the container alive so we can get a shell inside it.
-CMD ["sh", "-c", "echo 'Container is in debug mode. Keeping alive with an infinite sleep loop.' && while true; do sleep 3600; done"]
+# 6. The command to run the application. Uvicorn will listen on the port
+#    provided by the Cloud Run environment ($PORT, which defaults to 8080).
+CMD exec uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080}
