--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,25 @@
-fastapi
-uvicorn[standard]
-python-dotenv
-google-cloud-aiplatform
-google-generativeai
-genkit[googleai]
-firebase-admin
-pydantic
-python-docx
-pdfplumber
-weasyprint
-google-api-python-client
-sendgrid
-pytest
-httpx
-pytest-asyncio
+# Web Framework
+fastapi>=0.110.0
+uvicorn[standard]>=0.29.0
+python-dotenv>=1.0.0
 
-# Development and Testing
-black>=24.0.0
+# Google Cloud & Firebase
+firebase-admin>=6.5.0
+google-cloud-firestore>=2.16.0
+google-cloud-aiplatform>=1.47.0
+google-api-python-client>=2.126.0
+google-auth-oauthlib>=1.2.0
+
+# AI Orchestration
+genkit[googleai]>=0.4.0
+
+# Data Parsing & Generation
+pdfplumber>=0.11.0
+python-docx>=1.1.0
+weasyprint>=62.2
+
+# Third-Party APIs
+sendgrid>=6.11.0
+
+# Data Validation
+pydantic>=2.7.0
